Documents/cloudprint/YelpCamp/v1/readme.md
#YelpCamp

  * Add Landing Page(Homepage)
  * Add campgrounds Page that lists all campgrounds

  Each Campground has:
  * Name
  * Image



#Layout and Basic Styling
  * Create our header and footer partials
  * Add in Bootstrap(4.5)





#Creating New Campgrounds
  * Setup new campground POST route
  * Add in body-parser
  * Setup route to show form
  * Add basic unstyled form
  * Add data to our array
  * Use REST convention for naming


#Style the campgrounds Page
  * Add a better header/title
  * Make campgrounds display in a grid
    `jumbotron` `btn btn-primary btn-large`
    * New bootstrap 4.5 has removed thumbnail by figure see docs
    * style='display:flex; flex-wrap:wrap;' -> use it in case the grid doesn't appear as grid when checking the responsiveness of page
    * img-thumbnail will replace thumbnail


#Style the Navbar and Form
  * Add a navbar to all templates
  * Style the new campground form
